--- a/src/app/features/user/containers/add-item/add-item.component.html
+++ b/src/app/features/user/containers/add-item/add-item.component.html
@@ -1,3 +1,36 @@
-<p>
-  add-item works!
-</p>
+<ion-header>
+    <app-header title="Add Item">
+        <ion-back-button slot="start"></ion-back-button>
+    </app-header>
+  </ion-header>
+  <ion-content>
+    <form [formGroup]="form">
+      <ion-list>
+        <ion-item>
+          <ion-label>
+            Name:
+          </ion-label>
+          <ion-input formControlName="name" type="text"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>
+            Description:
+          </ion-label>
+          <ion-textarea formControlName="description" type="text"></ion-textarea>
+        </ion-item>
+        <ion-item>
+            <ion-label>
+              Deposit:
+            </ion-label>
+            <ion-input formControlName="deposit" type="text"></ion-input>
+          </ion-item>
+          <ion-item>
+              <app-camera></app-camera>
+            </ion-item>
+      </ion-list>
+      <ion-button (click)="submit()">Submit</ion-button>
+    </form>
+    <pre>
+      {{form.value|json}}
+    </pre>
+  </ion-content>
