--- a/src/app/features/auth/containers/login/login.component.html
+++ b/src/app/features/auth/containers/login/login.component.html
@@ -1,5 +1,5 @@
 <ion-content  padding>
-  <form [formGroup]="form" (submit)="send()">
+  <form [formGroup]="form" (submit)="send(buttonType)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -8,15 +8,16 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-input formControlName="email" type="email" placeholder="nathchab@gmail.com" ></ion-input>
+              <ion-input formControlName="email" type="email" ></ion-input>
             </ion-item>
             <ion-item>
               <ion-input formControlName="password" type="password" placeholder="Password" ></ion-input>
             </ion-item>
           </div>
           <div padding>
-            <ion-button size="large" type="submit" [disabled]="!form.valid" expand="block">Login</ion-button>
-          </div>
+            <ion-button size="large"  [disabled]="!form.valid" expand="block" (click)="send('login')">Login</ion-button>
+            <ion-button size="large"  [disabled]="!form.valid" expand="block" (click)="send('register')">Register</ion-button>
+           </div>
         </ion-col>
       </ion-row>
     </ion-grid>
