--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,9 @@
-<p>
-  header works!
-</p>
+<ion-toolbar [color]="color">
+    <ion-title>
+      {{ title }}
+    </ion-title>
+    <!-- using ng-content to handle template from parent -->
+    <ng-content>
+      <!-- template from patent will go here -->
+    </ng-content>
+  </ion-toolbar>
