--- a/src/app/features/auth/containers/login/login.component.html
+++ b/src/app/features/auth/containers/login/login.component.html
@@ -1,6 +1,6 @@
-<ion-content  padding>
+<ion-content  padding class="background">
   <form [formGroup]="form" (submit)="send(buttonType)">
-    <ion-grid>
+    <ion-grid >
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
