--- a/src/app/features/lend/containers/search/search.component.html
+++ b/src/app/features/lend/containers/search/search.component.html
@@ -1,3 +1,34 @@
-<p>
-  search works!
-</p>
+<ion-content  padding class="background">
+    <form [formGroup]="form" (submit)="search(buttonType)">
+      <ion-grid >
+        <ion-row color="primary" justify-content-center>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div text-center>
+              <h3>Rechercher un objet</h3>
+            </div>
+            <div padding>
+                <ion-item>
+                  <ion-label>
+                    Name:
+                  </ion-label>
+                  <ion-input formControlName="name" type="text"></ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-label>
+                    Dans un rayon de ? autour de moi:
+                  </ion-label>
+                  <ion-textarea formControlName="distance" type="text"></ion-textarea>
+                </ion-item>
+            </div>
+            <div padding>
+              <ion-button size="large"  [disabled]="!form.valid" expand="block" 
+              [routerLink]="'../item/' + item._id">
+                rechercher</ion-button>
+             </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </ion-content>
+  
+  
