--- a/src/app/features/user/containers/edit-item/edit-item.component.html
+++ b/src/app/features/user/containers/edit-item/edit-item.component.html
@@ -5,7 +5,11 @@
   </ion-header>
   <ion-content>
     <form [formGroup]="form">
-      <ion-list>
+
+      <ion-list *ngIf="(item$ | async) as item;">
+        <ion-item>
+            <ion-toggle formControlName="enabled" ></ion-toggle>
+        </ion-item> 
         <ion-item>
           <ion-label>
             Name:
