--- a/src/app/features/user/containers/items/items.component.html
+++ b/src/app/features/user/containers/items/items.component.html
@@ -1,11 +1,19 @@
+<ion-header>
+    <app-header title="Liste des objets disponible au prêt"></app-header>
+</ion-header>
 <ion-content  padding>
-
 <ion-grid>
+  <ion-row>
+    <ion-col>
+        <ion-button size="small" tappable [routerLink]="['../item']" color="secondary" end>Ajouter un objet
+          <ion-icon name="add" ></ion-icon>
+        </ion-button>
+    </ion-col>
+  </ion-row>
     <ion-row *ngIf="(items$| async) as items; else noData">
       <ion-col>
         <ion-card  *ngFor="let item of items" >
           <ion-card-header>
-              
             <ion-card-title color="primary">
                 <ion-grid><ion-row>
                     <ion-col>
@@ -15,11 +23,11 @@
                     </ion-col>
                     <ion-col  tappable [routerLink]="['user',item._id]">{{item?.name}}</ion-col>
                     <ion-col>
-                        <ion-toggle checked={{item?.enabled}} (ionChange)="toogleEnabled($event)" [value]="item._id" ></ion-toggle>
-                        <ion-button size="small" (click)="delete(item._id)" >
+                    <!--  pour 2ème version <ion-toggle checked={{item?.enabled}} (ionChange)="toogleEnabled($event)" [value]="item._id" ></ion-toggle>
+                     -->   <ion-button size="small" (click)="delete(item._id)" >
                           <ion-icon name="close" ></ion-icon>
                         </ion-button>
-                        <ion-button size="small" (click)="update(item._id)" >
+                        <ion-button size="small" tappable [routerLink]="['../item',item._id]"> 
                             <ion-icon name="create" ></ion-icon>
                           </ion-button>
                       </ion-col>                 
