--- a/src/app/features/user/containers/profil/profil.component.html
+++ b/src/app/features/user/containers/profil/profil.component.html
@@ -1,3 +1,90 @@
-<p>
-  profil works!
-</p>
+<ion-header>
+  <app-header title="Mon profil"></app-header>
+</ion-header>
+<ion-content>
+  <ion-grid style="height: 100%;" *ngIf="(user$ | async) as user;else noData">
+  <ion-row  class="background40">
+     <ion-col>
+       <app-camera></app-camera>
+        <!-- <ion-row style="padding: 10px">
+          <ion-col>
+              <ion-avatar class="image" style="margin:0 auto;align-items: center">
+                <img  src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"><br />
+             </ion-avatar>     
+          </ion-col>  
+        </ion-row>  -->
+        <ion-row style="padding: 10px">
+          <ion-col>
+              <ion-text color="light" >
+                  <h3 style="text-align: center">
+                      Je m'appelle {{user?.firstname }}&nbsp;{{ user?.lastname }} <br />
+                      alias<br />
+                       {{ user?.pseudo }}
+                  </h3>
+                </ion-text>
+          </ion-col>
+        </ion-row>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+        <ion-button  color="danger" expand="block"  size="medium" [routerLink]="['../editProfil']">modifier mes infos</ion-button>
+    </ion-col>
+  </ion-row>
+  <ion-row class="background45">
+    <ion-col>
+        <ion-nav>
+               
+                <ion-list>
+                    <ion-item button>
+                      <ion-label>
+                        <h2>liste des emprunts</h2>
+                      </ion-label>
+                      <ion-icon name="play" end></ion-icon>
+                    </ion-item>
+                    <ion-item button >
+                        <ion-label>
+                          <h2>liste des prêts</h2>
+                        </ion-label>
+                        <ion-icon name="play" end></ion-icon>
+                    </ion-item>
+                    <ion-item button >
+                        <ion-label>
+                          <h2>mes notifications</h2>
+                        </ion-label>
+                        <ion-icon name="play" end></ion-icon>
+                    </ion-item>
+                    <ion-item button [routerLink]="['../items']">
+                        <ion-label>
+                          <h2>mes objets</h2>
+                        </ion-label>
+                        <ion-icon name="play" end></ion-icon>
+                    </ion-item>
+                    <ion-item button >
+                        <ion-label>
+                          <h2>mes favoris</h2>
+                        </ion-label>
+                        <ion-icon name="play" end></ion-icon>
+                    </ion-item>
+   
+   
+                  </ion-list>
+              
+        </ion-nav>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>
+        <ng-template #noData>
+            <ion-row>
+              <ion-col>
+                <ion-text>Erreur : no profil found...</ion-text>
+              </ion-col>
+            </ion-row>
+          </ng-template>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+</ion-content>
+
