--- a/src/app/shared/components/camera/camera.component.html
+++ b/src/app/shared/components/camera/camera.component.html
@@ -1,12 +1,17 @@
 <input type="file" #fileInput style="visibility: hidden; height: 0px" name="files" (change)="processWebImage($event)" />
-<ion-row *ngIf="image">
-  <ion-col>
-    <img [src]="image"/>
+
+<ion-row *ngIf="image" style="padding: 10px">
+    <ion-col>
+    <ion-avatar class="image" style="margin:0 auto;align-items: center">
+        <img [src]="image"/>
+       <!--  <img  src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"><br /> !-->
+     </ion-avatar>     
   </ion-col>
 </ion-row>
+
 <ion-row>
   <ion-col>
-    <ion-button (click)="takePicture()">Take Picture</ion-button>
+    <ion-button (click)="takePhoto()">Take Picture</ion-button>
   </ion-col>
 </ion-row>
       
