--- a/src/app/features/user/containers/items/items.component.html
+++ b/src/app/features/user/containers/items/items.component.html
@@ -1,5 +1,7 @@
 <ion-header>
-    <app-header title="Liste des objets disponible au prêt"></app-header>
+    <app-header title="Liste des objets disponible au prêt">
+        <ion-back-button slot="start"></ion-back-button>
+    </app-header>
 </ion-header>
 <ion-content  padding>
 <ion-grid>
