--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,8 +16,8 @@
         Afin de pouvoir utiliser toutes les fonctionalités, veuillez vous rendre sur votre profil et le compléter.<br />
     </h1>
     </ion-text>
-    <ion-button  expand="block"  size="large" [routerLink]="'../user/editProfil'" >Compléter le profil</ion-button>
-    <br /><ion-button  expand="block"  size="large" [routerLink]="'../lend/search'"  >Plus tard</ion-button>
+    <ion-button  expand="block"  size="large" [routerLink]="'/x/fm/editProfil'" >Compléter le profil</ion-button>
+    <br /><ion-button  expand="block"  size="large" [routerLink]="'/x/fm/lend/search'"  >Plus tard</ion-button>
 
   </div>
 </ion-content>
