--- a/src/app/features/user/containers/edit-profil/edit-profil.component.html
+++ b/src/app/features/user/containers/edit-profil/edit-profil.component.html
@@ -1,5 +1,9 @@
-<ion-header>
-    <app-header title="Mon profil"></app-header>
+<ion-header translucent>
+    <app-header title="Mon profil" >
+      <ion-buttons slot="start">
+        <ion-back-button ></ion-back-button>
+      </ion-buttons>
+    </app-header>
 </ion-header>
   <ion-content>
     <ion-row *ngIf="(user$ | async) as user;">
@@ -7,7 +11,7 @@
       <ion-avatar>
           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
       </ion-avatar>
-      <app-camera (pictureSelected)="pictureSelected($event)"></app-camera>       
+      <app-camera (pictureSelected)="pictureSelected($event)" [takePicture]="true"></app-camera>       
       <ion-list>
         <ion-item>
           <ion-label floating>Nom</ion-label>
