--- a/src/app/features/user/containers/profil/profil.component.html
+++ b/src/app/features/user/containers/profil/profil.component.html
@@ -6,14 +6,7 @@
   <ion-row  class="background40">
      <ion-col>
        <app-camera></app-camera>
-        <!-- <ion-row style="padding: 10px">
-          <ion-col>
-              <ion-avatar class="image" style="margin:0 auto;align-items: center">
-                <img  src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"><br />
-             </ion-avatar>     
-          </ion-col>  
-        </ion-row>  -->
-        <ion-row style="padding: 10px">
+         <ion-row style="padding: 10px">
           <ion-col>
               <ion-text color="light" >
                   <h3 style="text-align: center">
@@ -28,7 +21,7 @@
   </ion-row>
   <ion-row>
     <ion-col>
-        <ion-button  color="danger" expand="block"  size="medium" [routerLink]="['../editProfil']">modifier mes infos</ion-button>
+        <ion-button  color="danger" expand="block"  size="medium" [routerLink]="['/x/fm/editProfil']">modifier mes infos</ion-button>
     </ion-col>
   </ion-row>
   <ion-row class="background45">
@@ -54,13 +47,13 @@
                         </ion-label>
                         <ion-icon name="play" end></ion-icon>
                     </ion-item>
-                    <ion-item button [routerLink]="['../items']">
+                    <ion-item button [routerLink]="['/x/fm/tentaItems']">
                         <ion-label>
                           <h2>mes objets</h2>
                         </ion-label>
                         <ion-icon name="play" end></ion-icon>
                     </ion-item>
-                    <ion-item button >
+                    <ion-item button [routerLink]="['/x/fm/favorites']">
                         <ion-label>
                           <h2>mes favoris</h2>
                         </ion-label>
