--- a/src/app/features/lend/containers/search/search.component.html
+++ b/src/app/features/lend/containers/search/search.component.html
@@ -14,7 +14,7 @@
                    name is required</div>
                    <app-input-message control="form.get('name')" textError="erreur"></app-input-message>
                 <ion-item>
-                  <ion-input formControlName="distance" type="text" placeholder="Distance max"></ion-input>
+                  <ion-input formControlName="distance" style="box-shadow: none" type="text" placeholder="Distance max"></ion-input>
                 </ion-item>
             </div>
             <div padding>
