--- a/src/app/features/user/containers/edit-profil/edit-profil.component.html
+++ b/src/app/features/user/containers/edit-profil/edit-profil.component.html
@@ -1,8 +1,7 @@
 <ion-header translucent>
     <app-header title="Mon profil" >
-      <ion-buttons slot="start">
-        <ion-back-button ></ion-back-button>
-      </ion-buttons>
+     <!-- <ion-back-button slot="start"></ion-back-button> -->
+     <ion-button slot="start" (click)="back()"><ion-icon name="arrow-back"></ion-icon></ion-button>
     </app-header>
 </ion-header>
   <ion-content>
