--- a/src/app/features/user/containers/profil/profil.component.html
+++ b/src/app/features/user/containers/profil/profil.component.html
@@ -41,7 +41,7 @@
                         </ion-label>
                         <ion-icon name="play" end></ion-icon>
                     </ion-item>
-                    <ion-item button >
+                    <ion-item button [routerLink]="['/x/fm/notifs']">
                         <ion-label>
                           <h2>mes notifications</h2>
                         </ion-label>
